 * All public functions are now documented with Doxygen comments.
 * Changed all occurrences of uint and ushort to unsigned int and unsigned
   short.
 * Fixed many GCC compile problems.  Niflib should compile in GCC now:
   - Replaced array template with a simpler one that works with GCC.
   - Replaced "unsigned" with "unsigned int"  GCC doesn't like this.
   - Changed C++ style unsigned int casts so GCC will be able to understand
     them.
   - Properly capitalized include file names in niflib.cpp.
 * Changed as many functions as possible to take pointer arguments instead of
   Ref template arguments.
 * Prevented the link map from being copied unnecessarily, improving
   performance and memory usage.
   
==Version 0.7.2==

 * Added some internal template functions for extracting flags and fields from
   bitfields to NIF_IO.h.
 * Finished new MatTexCollection helper class which makes it possible to
   manipulate material properties and texture objects with the same classes
   regardless of the intended NIF version.
 * Implemented write for files of version < 3.3.0.13, so now old files can be
   both read and written.
 * Made some minor formatting improvements through alteration in the XML Python
   script.
 * Pre-main initialization of objects was causing problems with both static and
   DLL linking of the library.  I fixed the DLL issues, but statically linking
   the library caused none of the objects to register themselves, so I went
   back to using a single function that registers all objects the first time
   ReadNifTree is called.  This fixes the issues with crashing and missing
   objects.
 * Moved Object Registration/Creation functionality into new ObjectRegistry
   class.  This allows users of the library to register new NIF object or
   overwrite exiting ones without recompiling the library.
 * Restored some missing function implementations.

==Version 0.7.3==

 * AsQuaternion is now a const member function (contributed by Dragongeo2).
